deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-back-app
  namespace: green-back
spec:
  selector:
    app: green-back-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5005
  type: NodePort
